# lolrmm-artifacts

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: refresh.yml
data/: applications.csv  completeness_report.csv  completeness_report.json  completeness_report.md  lolrmm.json  sigma_urls.txt  stats.json
data/csv/: artifacts_disk.csv  artifacts_eventlog.csv  artifacts_network.csv  artifacts_other.csv  artifacts_registry.csv  detections.csv  tools.csv
data/indicators/: disk-path-expanded.txt  disk-path.txt  domain.txt  event-id.txt  filename.txt  installation-path.txt  named-pipe.txt  pe-description.txt  pe-original-name.txt  pe-product.txt  port.txt  registry.txt  service-name.txt  user-agent.txt  vulnerability.txt
src/lolrmm_artifacts/: applications.py  cli.py  completeness.py  export.py  fetch.py  filters.py  indicators.py  metrics.py  models.py  normalize.py  parse.py  store.py
tests/: conftest.py  test_applications.py  test_completeness.py  test_indicators.py  test_normalize.py  test_parse.py  test_store_and_export.py
